# HardwareAwareOptimalQuantumCircuitCuttingAndKnitting

./: .gitignore  README.md  pyproject.toml  requirements.txt
bench_results/bench_final/: compare_tables.ods
bench_results/bench_final/others/benchmark_results_1000/sup_25_1_2_13_2024-02-29 14:44:41.473627/: run.log.2024-02-29
bench_results/bench_final/others/benchmark_results_1000/sup_25_1_2_13_2024-02-29 14:44:41.473657/: run.log.2024-02-29
bench_results/bench_final/others/benchmark_results_1000/sup_25_1_2_13_2024-02-29 14:44:41.473673/: run.log.2024-02-29
bench_results/bench_final/others/benchmark_results_1000/sup_25_1_2_13_2024-02-29 14:44:41.473676/: run.log.2024-02-29
bench_results/bench_final/others/benchmark_results_1000/sup_25_1_2_13_2024-02-29 14:44:41.473775/: run.log.2024-02-29
bench_results/c_e_refactor/memory/: compare_table.ods
bench_results/c_e_refactor/memory/ORIG/: add  aqft  ghz  hwe  qft  sup_20  sup_25  syc_12
bench_results/c_e_refactor/memory/REFRAC/: add  aqft  ghz  hwe  qft  sup_20  sup_25  syc_12
bench_results/c_e_refactor/time/: compare_table.ods
bench_results/c_e_refactor/time/REFRA/sup_25_1_2_13_2024-01-11 22:42:14.611539/: run.log.2024-01-11
benchmarks/: benchmark.py  benchmark_different_backends.py  benchmark_number_of_cnots_and_depth.py  helper_functions.py
examples/: example.py
plotting_scripts/: cnot_depth_plot.py  fid_plot.py
src/HwAwareCutter/: Cutter.py  Logger.py  Utilities.py
srcs/: test.py
srcs/qvm/: run.py  virtual_circuit.py  virtual_gates.py
srcs/qvm/compiler/virtualization/: wire_decomp.py
(+1 files in other folders)
